# test-01

./: ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/models/: contact.rs  email.rs  label.rs  mod.rs
backend/src/routes/: ai.rs  emails.rs  labels.rs  mod.rs  threads.rs
backend/src/services/: ai.rs  db.rs  emails.rs  labels.rs  mod.rs  threads.rs
frontend/: Dockerfile  package-lock.json  pnpm-lock.yaml  tailwind.config.js
frontend/.next/: app-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: server-reference-manifest.json
frontend/.next/server/app/: _not-found.js.nft.json  _not-found.rsc  index.rsc  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/chunks/: 703.js
frontend/.next/server/pages/: 404.html
frontend/.next/standalone/: package.json  server.js
frontend/.next/standalone/.next/: BUILD_ID  build-manifest.json  prerender-manifest.js  required-server-files.json
frontend/.next/static/chunks/: 224-ca21b7ca3bb7a3ac.js  974-3fcde37cd0c74570.js  main-app-cb2f950497c06cc6.js  webpack-87aef9fe7c1376a9.js
frontend/.next/types/app/: layout.ts  (+1 more)
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ComposeModal.tsx  EmailItem.tsx  EmailList.tsx  EmailView.tsx  Header.tsx  LabelManager.tsx  ShortcutsModal.tsx  Sidebar.tsx  ThreadView.tsx
frontend/src/lib/: api.ts  useDarkMode.ts  useKeyboardShortcuts.ts
frontend/src/styles/: globals.css
(+23 files in other folders)
